[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "approval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langfuse>=4.6.1",
]

[project.scripts]
approval = "approval.main:main"
