[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "approval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fitz>=0.0.1.dev2",
    "langfuse>=4.6.1",
    "openai>=2.36.0",
    "playwright>=1.59.0",
    "playwright-stealth>=2.0.3",
    "pycryptodome>=3.23.0",
    "rich>=15.0.0",
]

[project.scripts]
approval = "approval.main:main"
